[gd_scene load_steps=2 format=3 uid="uid://bd6c384yfiatm"]

[ext_resource type="Script" path="res://scripts/chat_message.gd" id="1_hdptd"]

[node name="ChatMessage" type="PanelContainer"]
offset_right = 1917.0
offset_bottom = 254.0
script = ExtResource("1_hdptd")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SenderIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
expand_mode = 3
stretch_mode = 5

[node name="SenderName" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64

[node name="MessageText" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
theme_override_font_sizes/font_size = 48
autowrap_mode = 2
